minor aesthetic fixes, alignment to grid

--- a/public/stylesheets/sass/_layout.sass
+++ b/public/stylesheets/sass/_layout.sass
@@ -96,6 +96,7 @@ body
     text-transform: uppercase
     color: #eaeaea
     &.copyright
+      margin-left: -4px // fix for cufon issue?
       color: white
     &:hover
       color: white
