--- a/public/stylesheets/sass/_patterns.sass
+++ b/public/stylesheets/sass/_patterns.sass
@@ -36,22 +36,18 @@ div.lifted_box
 li.video
   +block
   +relative
-  width: 100%
+  width: 698px
   height: 109px
   padding: 1px
   margin-bottom: 15px
   background: $bg_gray_dark
   +box_shadow(2px, #888888)
-  &:hover
-    img
-      opacity: 1
   img
     +block
     +left
     width: 144px
     height: 109px
     background: $bg_gray_dark
-    opacity: 0.9
   span.duration
     +absolute
     top: 4px
